// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component only opens one section at a time 1`] = `
<div>
  <p>
    Accordion goes here
  </p>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
      <br />
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <br />
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
      <br />
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </li>
  </ul>
</div>
`;

exports[`Accordion Component opens any clicked section 1`] = `
<div>
  <p>
    Accordion goes here
  </p>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
      <br />
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <br />
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
      <br />
    </li>
  </ul>
</div>
`;

exports[`Accordion Component renders the no sections by default 1`] = `
<div>
  <p>
    Accordion goes here
  </p>
  <ul>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
      <br />
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <br />
    </li>
    <li
      key="3"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
      <br />
    </li>
  </ul>
</div>
`;
